src/sfdc/force-app/main/default/objects/B2C_CustomerAddress__x/B2C_CustomerAddress__x.object-meta.xml
<CustomObject>
    <description>B2C_CustomerAddress</description>
    <externalDataSource>B2C_Customer_Address_Book</externalDataSource>
    <externalName>B2C_CustomerAddress</externalName>
    <label>B2C Customer Address</label>
    <pluralLabel>B2C Customer Addresses</pluralLabel>
</CustomObject>