src/sfdc/force-app/main/default/objects/B2C_CustomerAddress__x/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <description>Address2</description>
    <externalDeveloperName>Address2</externalDeveloperName>
    <label>Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>