src/sfdc/force-app/main/default/objects/B2C_CustomerAddress__x/fields/AddressId__c.field-meta.xml
<CustomField>
    <fullName>AddressId__c</fullName>
    <description>AddressId</description>
    <externalDeveloperName>AddressId</externalDeveloperName>
    <label>Address ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>