src/sfdc/force-app/main/default/objects/B2C_CustomerAddress__x/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>... represents the city associated with a given B2C Commerce Customer address.</description>
    <externalDeveloperName>City</externalDeveloperName>
    <inlineHelpText>... represents the city associated with a given B2C Commerce Customer address.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>