src/sfdc/force-app/main/default/objects/B2C_CustomerAddress__x/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <description>CountryCode</description>
    <externalDeveloperName>CountryCode</externalDeveloperName>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>