src/sfdc/force-app/main/default/objects/B2C_CustomerAddress__x/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <description>Customer_No</description>
    <externalDeveloperName>Customer_No</externalDeveloperName>
    <label>Customer Number</label>
    <length>255</length>
    <referenceTargetField>Contact.B2C_Customer_No__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Customer_No</relationshipName>
    <type>IndirectLookup</type>
</CustomField>