src/sfdc/force-app/main/default/objects/B2C_CustomerAddress__x/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <description>... represents the link to the customer that is the owner of a given B2C Commerce Customer address.</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <inlineHelpText>... represents the link to the customer that is the owner of a given B2C Commerce Customer address.</inlineHelpText>
    <label>Parent Customer</label>
    <length>255</length>
    <referenceTargetField>Contact.B2C_Customer_ID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>B2C Customer Addresses</relationshipLabel>
    <relationshipName>CustomerId</relationshipName>
    <type>IndirectLookup</type>
</CustomField>