src/sfdc/force-app/main/default/objects/B2C_CustomerAddress__x/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>LastName</description>
    <externalDeveloperName>LastName</externalDeveloperName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>