src/sfdc/force-app/main/default/objects/B2C_CustomerAddress__x/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone</description>
    <externalDeveloperName>Phone</externalDeveloperName>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>