src/sfdc/force-app/main/default/objects/B2C_CustomerAddress__x/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>PostalCode</description>
    <externalDeveloperName>PostalCode</externalDeveloperName>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>