src/sfdc/force-app/main/default/objects/B2C_CustomerAddress__x/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <description>... represents the state code, territory, or province that is associated with a given B2C Commerce Customer address.</description>
    <externalDeveloperName>StateCode</externalDeveloperName>
    <inlineHelpText>... represents the state code, territory, or province that is associated with a given B2C Commerce Customer address.</inlineHelpText>
    <label>State Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>